# skills-clawhub

skills/00xmorty/conatus/: _meta.json
skills/04551lh/order/: _meta.json
skills/0x-professor/cyber-ir-playbook/: _meta.json
skills/0x-professor/cyber-kev-triage/: _meta.json
skills/0x-professor/dl-transformer-finetune/: _meta.json
skills/0x-professor/docs-pipeline-automation/: _meta.json
skills/0x-professor/google-workspace-automation/: _meta.json
skills/0x-professor/nmap-pentest-scans/: _meta.json
skills/0x-professor/pentest-active-directory/: _meta.json
skills/0x-professor/pentest-c2-operator/: _meta.json
skills/0xcjl/autoresearch-pro/: _meta.json
skills/0xfango/listenhub-2/: _meta.json
skills/0xfango/listenhub-official-skills/: _meta.json
skills/0xfratex/virtualboxmanager/: _meta.json
skills/0xnagato/skill-porter/: _meta.json
skills/0xnyk/xint/: _meta.json  package.json  xint.ts
skills/0xrichyrich/nudge-marketplace/: _meta.json
skills/0xrikt/clawarena/: _meta.json
skills/0xrowan/onchain-contract-token-analy/: _meta.json
skills/0xspeter/humanize-chinese-2-0-0/: _meta.json
skills/1122525/rednote-publisher/: _meta.json
skills/1122525/rednote-viral-writer/: _meta.json
skills/12357851/n8n-workflow-automation-local-backup/: _meta.json
skills/14-tr/gitmap/: _meta.json
skills/liuzx886/calorie-lookup/: AGENTS.md  README.md  SKILL.md  WORKFLOW.md  _meta.json  pyproject.toml
skills/liuzx886/calorie-lookup/agents/: calorie-lookup-decomposer.md
skills/liuzx886/calorie-lookup/scripts/: config_example.py  core.py
(+4685 files in other folders)
