[project]
name = "calorie-lookup"
version = "0.1.0"
description = "USDA FoodData Central nutrition lookup & meal calorie estimation — agent skill"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Repository = "https://github.com/zengxuanliu2005/calorie-lookup"
